--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'io.qameta.allure' version '2.8.1'
 }
 
 group 'org.example'
@@ -9,11 +10,18 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    allureVersion = "2.13.3"
+    junitVersion = "5.6.2"
+}
+
 dependencies {
     implementation 'commons-net:commons-net:3.7'
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.6.2")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.6.2")
     implementation 'org.junit.jupiter:junit-jupiter-params:5.6.2'
+    compile "io.qameta.allure:allure-java-commons:${allureVersion}"
+    testImplementation "org.aspectj:aspectjweaver:1.9.5"
 }
 
 test {
@@ -21,5 +29,14 @@ test {
     testLogging.showStandardStreams = true
     beforeTest { descriptor ->
         logger.lifecycle("Running test: " + descriptor)
+    }
+}
+
+allure {
+    version = "${allureVersion}"
+    autoconfigure = true
+    aspectjweaver = true
+    useJUnit5 {
+        version = "${allureVersion}"
     }
 }
