--- a/build.gradle
+++ b/build.gradle
@@ -18,10 +18,15 @@ ext {
 dependencies {
     implementation 'commons-net:commons-net:3.7'
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.6.2")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.6.2")
-    implementation 'org.junit.jupiter:junit-jupiter-params:5.6.2'
-    compile "io.qameta.allure:allure-java-commons:${allureVersion}"
     testImplementation "org.aspectj:aspectjweaver:1.9.5"
+    compile("org.junit.jupiter:junit-jupiter-api:5.6.2")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.6.2")
+    testCompile("org.junit.jupiter:junit-jupiter-params:5.4.2")
+    compile "io.qameta.allure:allure-selenide:${allureVersion}"
+    compile "io.qameta.allure:allure-rest-assured:${allureVersion}"
+    compile "io.qameta.allure:allure-java-commons:${allureVersion}"
+    testImplementation "ch.qos.logback:logback-classic:1.2.3"
+    testCompile 'junit:junit:4.12'
 }
 
 test {
