--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile "io.qameta.allure:allure-java-commons:${allureVersion}"
     testImplementation "ch.qos.logback:logback-classic:1.2.3"
     testCompile 'junit:junit:4.12'
+    compile group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '8.3.1.jre8-preview'
 }
 
 tasks.withType(JavaCompile) {
